@@ -189,5 +189,4 @@ PyObject* igraphmodule_Graph_independence_number(igraphmodule_GraphObject* self)
 PyObject* igraphmodule_Graph___graph_as_cobject__(igraphmodule_GraphObject *self, PyObject *args, PyObject *kwds);
 PyObject* igraphmodule_Graph___register_destructor__(igraphmodule_GraphObject *self, PyObject *args, PyObject *kwds);
 
-
 #endif
